welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:18: error: expected class or object definition
def isFacingTrail(c:color):Boolean = { 
^SlugSnail:38: error: Unmatched closing brace '}' ignored here
}
^